buttons wonky but works otherwise

--- a/app/templates/headerDynamic.html
+++ b/app/templates/headerDynamic.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-center text-white">
-          <h1 class="my-2 ">ECO Tutor Scheduling</h1>
+          <h1 class="my-2 ">ECO {{ user[1][0]|upper}}{{user[1][1:] }} Scheduling</h1>
           <p>Welcome, {{ user[0] }}! You are logged in as {{ user[1] }}</p>
         </div>
       </div>
