--- a/app/templates/studentview.html
+++ b/app/templates/studentview.html
@@ -107,7 +107,7 @@
             <TR VALIGN=MIDDLE>
                 
             <thead>
-                <tr><strong style="margin-left:  10px;"> Friday, March 22 </strong></tr>
+                <tr><strong style="margin-left:  10px;"> {{date}}</strong></tr>
                 <tr>
                     <th>Tutor</th>
                     <th>Times </th>
