--- a/app/templates/studentview.html
+++ b/app/templates/studentview.html
@@ -102,16 +102,16 @@
         <h2 style="margin-left: 10px;" class="h2">Available Appointments</h2>
         {% for date, tutors in chronological_appointments.items() %}
         <br>
-        <table style="margin-left:  10px;" class="col-md-6" border="1" >
-            <div style="margin-right:100px">
-            <TR VALIGN=MIDDLE>
-                
+        <table class="col-md-10" border="1" >
             <thead>
-                <tr><strong style="margin-left:  10px;"> {{date}}</strong></tr>
                 <tr>
-                    <th>Tutor</th>
-                    <th>Times </th>
+                    <th colspan="3">{{ date.strftime('%A, %B %d, %Y') }}</th>
                 </tr>
+                <tr>
+                    <th class="tutor-column">Tutor</th>
+                    <th>Times Available</th>
+                </tr>
+            </thead>
                 {% for tutor, appointments in tutors.items() %}
                 <tr>
                     <td>
