--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -1,4 +1,4 @@
-<h2><span style="color: black;">Schedule (</span><span style="color: #F4A460;">not booked</span><span style="color: black;">, </span><span style="color: #716e6b;">booked</span><span style="color: black;">)</span></h2>
+<h2><span style="color: black;">Schedule (</span><span style="color: #F4A460;">available</span><span style="color: black;">, </span><span style="color: #716e6b;">booked</span><span style="color: black;">)</span></h2>
 
 {% if user[1] == "tutor" %}
 <h3>Click on an existing appointment to view details/cancel. Click '+' to add new appointment time.</h3>
