got started on cas auth stuff

--- a/app/templates/loggedout.html
+++ b/app/templates/loggedout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!-- =========================================================== -->
-<!-- index.html                                                  -->
+<!-- loggedout.html                                              -->
 <!-- Author: Libo Tan                                            -->
 <!-- =========================================================== -->
 
@@ -17,13 +17,8 @@
 
     <body>
         <div class="container centered">
-            <h1 class="mb-4">Welcome to the ECO100 Scheduling App!</h1>
-            <p class="mb-4">Login with your Princeton email:</p>
-            <div class="row">
-                <div class = "col">
-                <a href="/user_type" class="btn warm-btn btn-lg btn-block" role="button">NetID Login</a>
-                </div>
-            </div> 
+            <h2 class="mb-4">You are logged out of the ECO100 Scheduling App.</h2>
+            <a href="/index"  class="btn warm-btn btn-lg btn-block" >Log back in</a>
         </div>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     </body>
