--- a/app/templates/user_type.html
+++ b/app/templates/user_type.html
@@ -12,16 +12,22 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">    
-        <title>ECO100 Tutoring App</title>
+        <title>Home</title>
     </head>
 
     <body>
         <div class="container centered">
             <h1 class="mb-4">Welcome to the ECO100 Scheduling App!</h1>
-            <p class="mb-4">Login with your Princeton email:</p>
+            <p class="mb-4">Choose a login account:</p>
             <div class="row">
                 <div class = "col">
-                <a href="/user_type" class="btn warm-btn btn-lg btn-block" role="button">NetID Login</a>
+                <a href="/studentview" class="btn warm-btn btn-lg btn-block" role="button">Student</a>
+                </div>
+                <div class = "col">
+                <a href="/tutorview" class="btn warm-btn btn-lg btn-block" role="button">Tutor</a>
+                </div>
+                <div class = "col">
+                <a href="/adminview" class="btn warm-btn btn-lg btn-block" role="button">Admin </a>
                 </div>
             </div> 
         </div>
