--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -22,9 +22,11 @@
                 <td>
                     {% for appointment in appointments  %}
                         {% if user[1] == "tutor" and user[2] != tutor %}
-                            <button class="btn time-slot {{ 'dark-btn' if appointment[1] else 'warm-btn' }}" onclick="window.location.href='{{ url_for( 'appointment_page', tutor_netid=tutor, date=date, time=appointment[0] ) }}'" disabled>{{ appointment[0] }}</button>
+                            <button class="btn time-slot {{ 'dark-btn' if appointment[1] else 'warm-btn' }}" data-tutor_netid="{{tutor}}" data-date="{{date}}" data-time="{{appointment[0]}}" disabled>{{ appointment[0] }}</button>
+                        {% elif user[1] == "student" %}
+                            <button class="btn time-slot warm-btn" data-tutor_netid="{{tutor}}" data-date="{{date}}" data-time="{{appointment}}">{{ appointment }}</button>
                         {% else %}
-                            <button class="btn time-slot {{ 'dark-btn' if appointment[1] else 'warm-btn' }}" onclick="window.location.href='{{ url_for( 'appointment_page', tutor_netid=tutor, date=date, time=appointment[0] ) }}'">{{ appointment[0] }}</button>
+                            <button class="btn time-slot {{ 'dark-btn' if appointment[1] else 'warm-btn' }}" data-tutor_netid="{{tutor}}" data-date="{{date}}" data-time="{{appointment[0]}}">{{ appointment[0] }}</button>
                         {% endif %}
                     {% endfor %}
                     {% if user[1] == "tutor" and user[2] == tutor %}
@@ -37,3 +39,14 @@
 </table>
 <br> 
 {% endfor %}
+
+<!-- Bootstrap JS and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<!-- Include modal container -->
+<div id="modal-container"></div>
+
+<!-- Include external JavaScript file -->
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
