--- a/app/templates/admin/adminview.html
+++ b/app/templates/admin/adminview.html
@@ -16,6 +16,8 @@
         <!-- Custom CSS Module -->
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">       
         <title>Dashboard</title>
+        <!-- Include external JavaScript file -->
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     </head>
 
 
