--- a/app/templates/appointment_popup.html
+++ b/app/templates/appointment_popup.html
@@ -8,7 +8,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modelLabel">Book Appointment</h5>
+                <h4 class="modal-title" id="modelLabel">Appointment Details ({{"Booked" if appointment.get_booked() else "Available"}}):</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
