--- a/app/templates/admin/tutor_overview.html
+++ b/app/templates/admin/tutor_overview.html
@@ -1,43 +1,27 @@
 <!DOCTYPE html>
 
 <!-- =========================================================== -->
-<!-- appointment_page.html                                       -->
+<!-- tutor_overview.html                                         -->
 <!-- Author: Hita Gupta                                          -->
 <!-- =========================================================== -->
-
-
-<html>
  
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <!-- Custom CSS Module -->
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">       
-        <title>Appointment</title>
-        <style>
-            body {
-            background-color: #F5F5DC; 
-        }
-        </style>
-    </head>
-
-    <body>
-        {% include 'headerDynamic.html' with context %}
+<div class="modal fade" id="overviewModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="modelLabel">Tutor Overview</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">            
+                {% for tutor in names_bios %}
         
-        <div class="container-fluid" >
-        <h2>Tutor Overview:</h2>
-            
-        {% for tutor in names_bios %}
-
-            {{tutor}}: {{names_bios[tutor]}}
-            <br>
-
-        {% endfor %}
-
-        <!DOCTYPE html>
-
-</html>
+                    {{tutor}}: {{names_bios[tutor]}}
+                    <br>
+        
+                {% endfor %}        
+            </div>
+        </div>
+    </div>
+</div>
