--- a/app/templates/headerDynamic.html
+++ b/app/templates/headerDynamic.html
@@ -18,6 +18,9 @@
         </div>
       </div>
     </div>
+    <div class="d-flex justify-content-end">
+      <a href="/logoutcas" class= "btn btn-danger">Log Out</a>
+    </div>
   </header>
   <br>
 
