--- a/app/templates/student/studentview.html
+++ b/app/templates/student/studentview.html
@@ -45,12 +45,19 @@
                     {% endfor %}
                 </ul>
               </div>
+            
             </div>
-            <hr>
-
-            {% include 'schedule.html' with context %}
 
         </div>
+        <hr>
+            
+        <div style="margin:0.1px;" class="container" >
+        
+        
+          
+            {% include 'schedule.html' with context %}
+
+        </div>  
         
         {% include 'footer.html' with context %}
 
