--- a/app/templates/student/studentview.html
+++ b/app/templates/student/studentview.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!-- =========================================================== -->
-<!-- studentview.html                                              -->
+<!-- studentview.html                                             -->
 <!-- Author: Sofia Marina                                          -->
 <!-- =========================================================== -->
 
@@ -22,9 +22,30 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <!-- Include external JavaScript file -->
         <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+        <style>
+            .hover-container {
+                position: relative;
+                display: inline-block;
+                width: 300px;      
+            }
+            .hover-text {
+                display: none;
+                position: absolute;
+                left: 0;
+                top: 100%;
+                background-color: lightgrey;
+                padding: 5px;
+                border: 1px solid black;
+            }
+            .hover-container:hover .hover-text {
+                display: block;
+            }
+        </style>
     </head>
+    
 
     <body> 
+        
         {% include 'headerDynamic.html' with context %}
         <hr>
         <div style="margin:0.1px;" class="container" >
@@ -58,15 +79,60 @@
         <hr> 
         <!-- Include popup containers -->
         <div id="overview-modal-container"></div>
-  
-        <div style="margin:0.1px;" class="container" >
-
-            {% include 'schedule.html' with context %} 
-
-        </div>  
         
-        {% include 'footer.html' with context %}
+        <div style="margin:0.1px;" class="container" >
+            
+            <h2><span style="color: black;">Schedule (</span><span style="color: #F4A460;">available</span><span style="color: black;">, </span><span style="color: #716e6b;">booked</span><span style="color: black;">)</span></h2>
 
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    </body>
+            {% if user[1] == "tutor" %}
+            <h3>Click on an existing appointment to view details/cancel. Click '+' to add new appointment time.</h3>
+            {% endif %}
+            
+            {% if user[1] == "student" and not can_book %}
+            <h3>The calendar is currently disabled as you can only book one appointment per week.</h3>
+            {% endif %}
+            
+            {% for date, tutors in appointments_by_date.items() %}
+            <table class="col-md-8" border="1">
+                <thead>
+                    <tr>
+                        <th colspan="3">{{ date.strftime('%A, %B %d, %Y') }}</th>
+                    </tr>
+                    <tr>
+                        <th class="tutor-column">Tutor</th>
+                        <th>Times Available</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for tutor, appointments in tutors.items() %}
+                        <tr>
+                            <td><div class="hover-container">
+                                {{tutor}}
+                                <div class="hover-text">Tutor Bio!</div>
+                            </div></td>
+                            <td>
+                                {% for appointment in appointments  %}
+                                    {% if user[1] == "tutor" and user[2] != tutor %}
+                                        <button class="btn time-slot {{ 'dark-btn' if appointment[1] else 'warm-btn' }}" data-tutor_netid="{{tutor}}" data-date="{{date}}" data-time="{{appointment[0]}}" disabled>{{ appointment[0] }}</button>
+                                    {% elif user[1] == "student" and can_book %}
+                                        <button class="btn time-slot warm-btn" data-tutor_netid="{{tutor}}" data-date="{{date}}" data-time="{{appointment}}">{{ appointment }}</button>
+                                    {% elif user[1] == "student" and not can_book %}
+                                        <button class="btn time-slot warm-btn" data-tutor_netid="{{tutor}}" data-date="{{date}}" data-time="{{appointment}}" disabled>{{ appointment }}</button>
+                                    {% else %}
+                                        <button class="btn time-slot {{ 'dark-btn' if appointment[1] else 'warm-btn' }}" data-tutor_netid="{{tutor}}" data-date="{{date}}" data-time="{{appointment[0]}}">{{ appointment[0] }}</button>
+                                    {% endif %}
+                                {% endfor %}
+                                {% if user[1] == "tutor" and user[2] == tutor %}
+                                    <button class="btn warm-btn" onclick="window.location.href='{{ url_for( 'add_appointment', tutor_netid=tutor, date=date ) }}'">+</button>
+                                {% endif %}    
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <br> 
+            {% endfor %}
+            
+            <!-- Include modal container -->
+            <div id="modal-container"></div>
 </html>
