--- a/app/templates/appointment_popup.html
+++ b/app/templates/appointment_popup.html
@@ -8,12 +8,17 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="modelLabel">Appointment Details ({{"Booked" if appointment.get_booked() else "Available"}}):</h5>
+                <h4 class="modal-title" id="modelLabel">{% if not error %}Appointment Details ({{"Booked" if appointment.get_booked() else "Available"}}){% else %}Unauthorized{% endif %}:</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
+
+                {% if error %}
+                {{error}}
+
+                {% else %}
 
                 <form action="/appointment_confirm" method="post">
 
@@ -65,7 +70,8 @@
                     <hr>
                     <a href="{{url_for('cancel_appointment', time=appointment.get_time(), tutor_netid=tutor.get_netid())}}">Cancel appointment</a>
                     {% endif %}
-                </form>        
+                </form>
+                {% endif %}      
             </div>
         </div>
     </div>
