--- a/app/templates/tutor/tutorview.html
+++ b/app/templates/tutor/tutorview.html
@@ -39,8 +39,8 @@
                 <ul class="list-group list-group-flush">
                     {% for date, time, netid in apt_tutor %}
                     <li class="list-group-item">
-                        {{ date }} {{ time }} with {{ netid }}
-                        <button class="btn warm-btn float-end view-cancel" data-tutor_netid="{{user[2]}}" data-date="{{date}}" data-time="{{time}}">View/Cancel</button> 
+                      {{date.strftime('%A, %B %d')}} at {{time}} with {{netid}}
+                      <button class="btn warm-btn float-end view-cancel" data-tutor_netid="{{user[2]}}" data-date="{{date}}" data-time="{{time}}">View/Cancel</button> 
                     </li>
                     {% endfor %}
                 </ul>
