--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -8,9 +8,9 @@
 <h3>The calendar is currently disabled as you can only book one appointment per week.</h3>
 {% endif %}
 
-<button class="btn warm-btn calendar-choose-week" data-week="2025-12">Week 0</button>
-<button class="btn warm-btn calendar-choose-week" data-week="2025-13">Week 1</button>
-<button class="btn warm-btn calendar-choose-week" data-week="2025-14">Week 2</button>
+<button class="btn warm-btn calendar-choose-week" data-week="2025-12">Current Week</button>
+<button class="btn warm-btn calendar-choose-week" data-week="2025-13">Next Week</button>
+<button class="btn warm-btn calendar-choose-week" data-week="2025-14">Two Weeks</button>
 
 {% for week, appointments_by_date in weekly_appointments.items() %}
 
