Fixed popup window close button

--- a/app/templates/admin/weekly_summary.html
+++ b/app/templates/admin/weekly_summary.html
@@ -5,15 +5,14 @@
 <!-- Author: Hita Gupta                                          -->
 <!-- =========================================================== -->
  
+<!-- Modal code based on code from ChatGPT -->
 
-<div class="modal fade" id="summaryModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="summaryModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="modelLabel">Weekly Summary ({{summary["Total Appointments"]}} Appointments):</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <h5 class="modal-title" id="modalLabel">Weekly Summary ({{summary["Total Appointments"]}} Appointments):</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">            
                 {% for tutor in summary["Total Appointments (By Tutor)"] %}
