--- a/app/templates/admin/tutor_overview.html
+++ b/app/templates/admin/tutor_overview.html
@@ -5,14 +5,12 @@
 <!-- Author: Hita Gupta                                          -->
 <!-- =========================================================== -->
  
-<div class="modal fade" id="overviewModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="overviewModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="modelLabel">Tutor Overview</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <h5 class="modal-title" id="modalLabel">Tutor Overview</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">            
                 {% for tutor in names_bios %}
