--- a/app/templates/tutor/add_appointment.html
+++ b/app/templates/tutor/add_appointment.html
@@ -1,55 +1,35 @@
-<!DOCTYPE html>
-
 <!-- =========================================================== -->
 <!-- add_appointment.html                                        -->
 <!-- Author: Hita Gupta                                          -->
 <!-- =========================================================== -->
 
+<div class="modal fade" id="addAppointmentModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel">Add New Appointment</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form action="/add_appt_submit" method="POST">
 
-<html>
- 
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <!-- Custom CSS Module -->
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">       
-        <title>Appointment</title>
-        <style>
-            body {
-            background-color: #F5F5DC; 
-        }
-        </style>
-    </head>
-
-    <body>
-        {% include 'headerDynamic.html' with context %}
+                    <input type="hidden" id="tutor" name="tutor" value={{tutor}}><br>
         
-        <div class="container-fluid" >
-        <h2>Add New Appointment:</h2>
-
-        <form action="/add_appt_submit" method="POST">
-
-            <input type="hidden" id="tutor" name="tutor" value={{tutor}}><br>
-
-            <label for="date">Date:</label>
-            <br>
-            <input type="date" name="date" value="{{date}}">
-            <br>
-
-            <label for="time">Time:</label>
-            <br>
-            <input type="time" name="time">
-            <br>
-
-            <input type="submit" value="Submit"><br>
-
-            <hr><a href="{{url_for('tutorview')}}">Go back to dashboard</a>
-        </form>
-
-        <!DOCTYPE html>
-
-</html>
+                    <label for="date">Date:</label>
+                    <br>
+                    <input type="date" name="date" value="{{date}}">
+                    <br>
+        
+                    <label for="time">Time:</label>
+                    <br>
+                    <input type="time" name="time">
+                    <br>
+        
+                    <input type="submit" value="Submit"><br>
+        
+                    <hr><a href="{{url_for('tutorview')}}">Go back to dashboard</a>
+                </form>        
+            </div>
+        </div>
+    </div>
+</div>
