Shows popup to confirm that tutor would like to copy previous week's times

--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -71,3 +71,4 @@
 <!-- Include modal container -->
 <div id="modal-container"></div>
 <div id="add-appt-modal-container"></div>
+<div id="copy-times-confirm-container"></div>
