--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -13,7 +13,7 @@
 
 {% if loop.index0 > 0 %}
 <hr>
-<button class="btn warm-btn copy-times">Copy Times From Last Week</button>
+<button class="btn warm-btn copy-times" data-mindate="{{appointments_by_date|min}}" data-maxdate="{{appointments_by_date|max}}">Copy Times From Last Week</button>
 {% endif %}
 <hr>
 
@@ -55,7 +55,7 @@
         <tr>
             <td>{{ user[2] }}</td>
             <td>
-                <button class="btn warm-btn add-time" data-tutor_netid="{{tutor}}" data-date="{{date}}">+</button>
+                <button class="btn warm-btn add-time" data-tutor_netid="{{user[2]}}" data-date="{{date}}">+</button>
             </td>
         </tr>
         {% endif %}
