--- a/app/templates/user_type.html
+++ b/app/templates/user_type.html
@@ -13,6 +13,15 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">    
         <title>Home</title>
+        <!-- Custom CSS Module -->
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">       
+        <!-- Bootstrap JS and jQuery -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+        <!-- Include external JavaScript file -->
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/schedule.js') }}"></script>
     </head>
 
     <body>
@@ -21,15 +30,20 @@
             <p class="mb-4">Choose a login account:</p>
             <div class="row">
                 <div class = "col">
-                <a href="/studentview" class="btn warm-btn btn-lg btn-block" role="button">Student</a>
+                    <div id="student-id-modal-container"></div>
+                    <button class="btn warm-btn btn-lg btn-block choose_netid">Student</button>
                 </div>
                 <div class = "col">
-                <a href="/tutorview" class="btn warm-btn btn-lg btn-block" role="button">Tutor</a>
+                    <div id="tutor-id-modal-container"></div>
+                    <button class="btn warm-btn btn-lg btn-block choose_netid_tutor">Tutor</button>
                 </div>
                 <div class = "col">
-                <a href="/adminview" class="btn warm-btn btn-lg btn-block" role="button">Admin </a>
+                    <div id="admin-id-modal-container"></div>
+                    <button class="btn warm-btn btn-lg btn-block choose_netid_admin">Admin</button>
                 </div>
+                
             </div> 
+            
         </div>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     </body>
