--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -1,9 +1,20 @@
-<h2><span style="color: black;">Schedule (</span><span style="color: #F4A460;">available</span><span style="color: black;">, </span><span style="color: #716e6b;">booked</span><span style="color: black;">)</span></h2>
+<h2><span style="color: black;">Schedule</span></h2>
 
-{% if user[1] == "student" and not can_book %}
-<h3>The calendar is currently disabled as you can only book one appointment per week.</h3>
+{% if user[1] == "student" %}
+{% if not can_book %}
+<h4>The calendar is currently disabled as you can only book one appointment per week.</h4>
+{% else %}
+<h4>Click on a time slot to book an appointment. You can view a tutor's bio by hovering over their name.</h4>
+{% endif %}
 {% endif %}
 
+{% if user[1] == "tutor" %}
+<h4>Click on a time slot to view, cancel, or delete. Click '+' to add a new time slot.</h4>
+{% endif %}
+
+{% if user[1] == "admin" %}
+<h4>Click on a time slot to view details.</h4>
+{% endif %}
 
 <div>
     <button class="btn warm-btn update-week-calendar" data-week="-1" id="prev-week" disabled>Previous Week</button>
@@ -29,8 +40,8 @@
             <th colspan="3">{{ date.strftime('%A, %B %d, %Y') }}</th>
         </tr>
         <tr>
-            <th class="tutor-column">Tutor</th>
-            <th>Times Available</th>
+            <th class="tutor-column">Tutors</th>
+            <th>Times</th>
         </tr>
     </thead>
     <tbody>
