--- a/app/templates/admin/upload_confirmation.html
+++ b/app/templates/admin/upload_confirmation.html
@@ -17,7 +17,7 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!-- Custom CSS Module -->
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">       
-        <title>Appointment</title>
+        <title>Upload Confirmation</title>
         <style>
             body {
             background-color: #F5F5DC; 
